--- a/mainCrane.css
+++ b/mainCrane.css
@@ -2,6 +2,7 @@
 General see what font she wants to use
 ************/
 
+
 body {
   font-family: 'Open Sans', sans-serif
 }
@@ -44,13 +45,13 @@ header {
 hi {
   font-family: 'Metamorphous', cursive;
   margin: 15px 0;
-  font-size: 1.75em;
+  font-size: 2em;
   font-weight: normal;
   line-height: 0.8em;
 }
 
 h2 {
-  font-size: 0.75em;
+  font-size: 1.50em;
   margin: -5px 0 0;
   font-weight: normal;
 }
@@ -184,15 +185,15 @@ body {
   color:#999;
 }
 
-/* green header */
+/* blue header */
 header {
   background: #20b2aa;
-  border-color: #fff;
+  border-color: #20b2aa;
 }
 
 /* nav background on mobile */
 nav {
-  background: #599a68;
+  background: #20b2aa;
 }
 
 /* logo text */
