--- a/responsiveCrane.css
+++ b/responsiveCrane.css
@@ -1,6 +1,7 @@
 @media screen and (min-width: 480px) {
   
-  /************
+
+ /************
   Two Column Layout
   ************/
   
@@ -51,7 +52,8 @@ Page Portfolio
   /************
   Header
   ************/
-  
+
+
   nav {
     background: none;
     float: right;
@@ -69,16 +71,16 @@ Page Portfolio
   }
   
   h1 {
-    font-size: 2.5em;
+    font-size: 2em;
   }
   
   h2 {
-    font-size: 0.825em;
+    font-size: 1.25em;
     margin-bottom: 20px;
   }
   
   header {
-    border-bottom: 5px solid #599a68;
-    margin-bottom: 60px;
+    border-bottom: 5px solid #20b2aa;
+    margin-bottom: 50px;
   }
 }  
