--- a/stickyNick.css
+++ b/stickyNick.css
@@ -46,12 +46,13 @@ a img {
 .profile-photo {
   display: block;
   max-width: 150px;
-  margin: 0 auto 30px;
+  margin: 0px 5% 80px 0px;
   border-radius: 100%;
+  float: left;
 }  
 .profile-photo {
-    float: left;
-    margin: 0px 5% 80px 0px;
+    
+    
 }
 
 /* =Scss Variables
@@ -75,7 +76,7 @@ body {
 
 /* Headings */
 h1, h2, h3, h4, h5, h6 {
-  line-height: 1;
+ /* line-height: 1; */
   font-weight: 300; }
 
 a {
@@ -263,15 +264,7 @@ footer {
       line-height: 50px; 
       margin: 0 10px} 
     }
-          .profile-photo {
-        display: block;
-        max-width: 150px;
-        margin: 0 auto 30px;
-        border-radius: 100%;
-      }  
-      .profile-photo {
-        float: none;
-        margin: 0px 5% 80px 0px;
+         
 
 }
 @media all and (max-width: 600px) {
